# KoroEngine

./: .gitignore  .gitmodules  Build.py  CMakeCache.txt  CMakeLists.txt  GenerateProjects.py  MAINTANACE.md  Makefile  README.md  cmake_install.cmake  compile_commands.json  premake5.lua
.cache/clangd/index/: Application.cpp.BC1E719111F8CE62.idx  Platform.h.5CCCAADB3BB9E551.idx  Test.cpp.1DAEC3D6332312E2.idx  Test.h.BD1D87ACF656DC99.idx  ansicolor_sink-inl.h.A81BC894615D0059.idx  ansicolor_sink.h.DF8E406F0879FF88.idx  async.cpp.2551620C8A763645.idx  async.h.D79A15691F54F100.idx  async_logger-inl.h.6D49C1046418D94B.idx  async_logger.h.32580C412693A9D7.idx  backtracer-inl.h.6BB0E9D913890543.idx  backtracer.h.A12B145DC59F4BD4.idx  base.h.AE8AEF7F3ED9CB65.idx  base_sink-inl.h.42AB4540592CC39E.idx  base_sink.h.7023FE151B19BDB4.idx  basic_file_sink-inl.h.5DF9CF50EC372ED0.idx  basic_file_sink.h.CB73A296625F0F4A.idx  bundled_fmtlib_format.cpp.A278BBB3E3F2117F.idx  cfg.cpp.741AB984F27544EC.idx  circular_q.h.1A83CC2ACBBC282F.idx  color_sinks.cpp.231CF38F31804EFA.idx  common-inl.h.E0A07A8095DE4724.idx  common.h.9DC1942CCB7411BE.idx  console_globals.h.500D02BF004F49DC.idx  file_helper-inl.h.810686FB9E7EE686.idx  file_helper.h.E95B1C9D70AF8A9D.idx  file_sinks.cpp.563D038965C756DC.idx  fmt.h.7C6881A669C87D07.idx  fmt_helper.h.D328B02739C38226.idx  format-inl.h.6E25703609D86542.idx  format.h.CE97A48CC1293C29.idx  formatter.h.FFAB5DB3305B35AC.idx  (+36 more)
KoroEngine/: CMakeLists.txt  Makefile  cmake_install.cmake
KoroEngine/src/: KoroEngine.h  Platform.h  Test.cpp  Test.h  koropch.cpp  koropch.h
KoroEngine/src/KoroEngine/Core/: Application.cpp  Application.h  EntryPoint.h  Input.h  InputCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Platform.h  Window.h
KoroEngine/src/KoroEngine/Events/: ApplicationEvent.h  Event.h  EventBuffer.cpp  EventBuffer.h  EventType.h  KeyEvent.h  MouseEvent.h
KoroEngine/src/KoroEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
KoroEngine/src/Platform/Linux/: GlfwLinuxWindow.cpp  GlfwLinuxWindow.h  LinuxInput.cpp  LinuxInput.h
Sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake
Sandbox/src/: Application.cpp
